remove clove dependeny, make mvn test pass