@@ -1,21 +1,34 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>com.dua3.icns</groupId>
-    <artifactId>icns-root</artifactId>
-    <version>1.1m</version>
-  </parent>
+    <parent>
+        <groupId>com.dua3.icns</groupId>
+        <artifactId>icns-root</artifactId>
+        <version>1.1m</version>
+    </parent>
 
-  <artifactId>icns-core</artifactId>
-  <packaging>jar</packaging>
+    <artifactId>icns-core</artifactId>
+    <packaging>jar</packaging>
 
-  <name>ICNS Core Library</name>
+    <name>ICNS Core Library</name>
 
-  <dependencies>
-    <dependency>
-      <groupId>com.github.gino0631</groupId>
-      <artifactId>clove-io</artifactId>
-    </dependency>
-  </dependencies>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <encoding>UTF-8</encoding>
+                        <release>11</release>
+                        <compilerArgs>
+                            <arg>--add-modules</arg><arg>java.desktop</arg>
+                        </compilerArgs>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
